# ecg-pacemaker-detector

./: .gitignore  Dockerfile  README.md  ecg_pacemaker_detector.ipynb  entrypoint.sh  install.sh  pyproject.toml
docker/: entrypoint-ssh.sh  install-openssh-server.sh  install-poetry.sh  install-python.sh
ecg-pacemaker-detector/: app.py
ecg_pacemaker_detector/: app.py
model/best/: keras_metadata.pb  saved_model.pb
model/best/variables/: variables.index
resources/: ecg_predict.txt
tests/: test_ecg_pacemaker_mini_project.py
